[build-system]
requires=[
	"setuptools>=61.0",
	"versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "pontibus"
dynamic = ["version"]
authors=[
    {name="Irfan Alibay", email="irfan.alibay@omsf.io"},
]
dependencies = [
  'numpy',
  'networkx',
]
description="A package of experimental OpenFreeEnergy Protocols aimed at OpenForceField development"
readme="README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/OpenFreeEnergy/pontibus"

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git" 
match = ["*"]
default-tag = "0.0.0"
