[build-system]
requires=[
    "setuptools>=64",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "pontibus"
dynamic = ["version"]
authors=[
    {name="Irfan Alibay", email="irfan.alibay@omsf.io"},
]
dependencies = [
  'numpy',
  'networkx',
]
description="A package of experimental OpenFreeEnergy Protocols aimed at OpenForceField development"
readme="README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/OpenFreeEnergy/pontibus"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
pontibus = ["**/*.pdb", "**/*.sdf", "**/*.gz"]
