[build-system]
requires=[
    "setuptools>=77.0.3",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "pontibus"
dynamic = ["version"]
authors=[
    {name="Irfan Alibay", email="irfan.alibay@omsf.io"},
]
dependencies = [
  'numpy',
  'networkx',
]
description="A package of experimental OpenFreeEnergy Protocols aimed at OpenForceField development"
readme="README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
"Homepage" = "https://github.com/OpenFreeEnergy/pontibus"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
pontibus = ["**/*.pdb", "**/*.sdf", "**/*.gz"]

[tool.mypy]
files = "src"
ignore_missing_imports = true
warn_unused_ignores = true
